<resources>
    <string name="app_name">AlertMe</string>
    <string name="logotodo">TODO</string>
    <string name="splashText">ICS 115 Project</string>
    <string name="password">Password</string>
    <string name="confpassword">Confirm Password</string>
    <string name="username">Username</string>
    <string name="loginBtn">Login</string>
    <string name="registerBtn">New User? Register</string>
    <string name="registerBtnDone">REGISTER</string>
    <string name="register">REGISTER (Step 1 of 3)</string>
    <string name="register2">REGISTER (Step 2 of 3)</string>
    <string name="register3">REGISTER (Step 3 of 3)</string>
    <string name="next">Next</string>
    <string name="credits">Jayson Lee and Ralph Vicente</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="contactnum">Contact Number</string>
    <string name="backLogin">Back to Login</string>
    <string name="backToPage1">Go Back</string>
    <string name="backToPage2">Go Back</string>
    <string name="emergencyname">Emergency Contact Name</string>
    <string name="emergencycontact">Emergency Contact Number</string>
    <string name="next2">Next</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="set">Set</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="_00_00">00:00</string>
    <string name="minutes">Minutes</string>
    <string name="accountinfo">Account Information</string>
    <string name="nameinfo">Name</string>
    <string name="contactinfo">Contact Number</string>
    <string name="usernameinfo">Username</string>
    <string name="passinfo">Password</string>
    <string name="emergencyinfo">Emergency Contacts</string>
    <string name="emernameinfo">Emergency Contact Name</string>
    <string name="emernuminfo">Emergency Contact Number</string>
    <!-- set timer views -->
    <string name="set_timer_label_hours">HH</string>
    <string name="set_timer_label_minutes">MM</string>
    <string name="set_timer_label_seconds">SS</string>
    <string name="set_timer_button_plus">+</string>
    <string name="set_timer_button_minus">-</string>
    <string name="set_timer_button_start">Start</string>
    <string name="set_timer_button_close">Close</string>
    <string name="set_timer_button_reset">00</string>

    <!-- show countdown view -->
    <string name="show_countdown_title">Counting Down</string>
    <string name="show_countdown_double_zero">00</string>
    <string name="show_countdown_colon">:</string>
    <string name="show_countdown_button_pause">Pause</string>
    <string name="show_countdown_button_continue">Continue</string>
    <string name="show_countdown_button_cancel">Cancel</string>
    <string name="show_countdown_paused">PAUSED</string>

    <!-- show alarm view -->
    <string name="show_alarm_title">Time\'s up</string>
    <string name="show_alarm_times">Time\'s</string>
    <string name="show_alarm_up">up!</string>
    <string name="show_alarm_stop_alarm">Stop Alarm</string>

    <string name="notification_alarm_ticker_text">Time\'s up</string>
    <string name="notification_alarm_title">Time\'s up</string>
    <string name="notification_alarm_text">The countdown timer has reached zero.</string>

    <string name="version">Version: 1.00</string>
    <string name="version2">The latest version is already installed.</string>

</resources>
